Added login. CORS gem helper
